<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Shop More, Eat Less</string>
    <string name="current_balance">$0.00</string>
    <string name="goal">$70.00</string>
    <string name="skipped_button">Skip</string>
    <string name="reduce_button">Reduce</string>
    <string name="reset_button">Splurge</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_goal">goalActivity</string>
    <string name="title_activity_skip">Edit Skip</string>
    <string name="enter_textView">How much did you save?</string>
    <string name="skip_editText">$10.00</string>
    <string name="skip_button">Go</string>


</resources>
