<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.mei.shopmore.app.MainActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="50sp"
            android:text="@string/current_balance"
            android:id="@+id/current_balance"
            />

        <TextView
            android:layout_below="@+id/current_balance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="30sp"
            android:text="@string/goal"
            android:id="@+id/goal"
            />

        <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar"
            android:layout_below="@+id/goal"
            android:layout_centerHorizontal="true"
            />



    <ScrollView
        android:layout_below="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/list">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="20sp"
            android:text="this is meant to be a list"
            />
        </ScrollView>

        <Button
            android:layout_below="@+id/list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/skipped_button"
            android:text="@string/skipped_button"
            />

        <Button
            android:layout_below="@+id/list"
            android:layout_toRightOf="@+id/skipped_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/reduce_button"
            android:text="@string/reduce_button"
            />

        <Button
            android:layout_below="@+id/list"
            android:layout_toRightOf="@+id/reduce_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/reset_button"
            android:text="@string/reset_button"
            />



</RelativeLayout>
