<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.mei.shopmore.app.SkipActivity">

    <TextView
        android:text="@string/enter_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:textAppearance="?android:attr/textAppearanceLarge"
        />

    <EditText
        android:hint="@string/skip_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/skip_editText"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:ems="14"
        android:inputType="numberDecimal"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/skip_button"
        android:id="@+id/skip_button"
        android:layout_alignTop="@+id/skip_editText"
        android:layout_toRightOf="@+id/skip_editText"
        />

</RelativeLayout>
